--- a/css/style.css
+++ b/css/style.css
@@ -945,7 +945,7 @@ body {
 
 .header {
   height: 85vh;
-  background-image: linear-gradient(to right bottom, rgba(241, 56, 59, 0.5), rgba(44, 5, 5, 0.8)), url(../../new_img/hero1.jpg);
+  background-image: linear-gradient(to right bottom, rgba(241, 56, 59, 0.5), rgba(44, 5, 5, 0.8)), url(../../new_img/marschwertung.jpg);
   background-size: cover;
   background-position: top;
   position: relative;
