--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -4,7 +4,7 @@
         to right bottom,
         rgba($color-primary-light, 0.5),
         rgba($color-primary-dark, 0.8)),
-    url(../../new_img/hero1.jpg);
+    url(../../new_img/marschwertung.jpg);
     background-size: cover;
     background-position: top;
     position: relative;
