--- a/sass/components/_feature-box.scss
+++ b/sass/components/_feature-box.scss
@@ -12,6 +12,10 @@
         padding: 2rem;
     }
 
+    &1{
+        
+    }
+
     &__icon {
         font-size: 6rem;
         margin-bottom: .5rem;
@@ -24,8 +28,8 @@
             margin-bottom: 0;
         }
     }
-
+    /*
     &:hover {
         transform: translateY(-1.5rem) scale(1.03);
-    }
+    }*/
 }
