--- a/css/style.css
+++ b/css/style.css
@@ -115,8 +115,7 @@ body {
   animation-name: moveInLeft;
   animation-duration: 1s;
   animation-timing-function: ease-out;
-  animation-delay: 3s;
-  animation-iteration-count: 3;
+  animation-iteration-count: 1;
 }
 @media only screen and (max-width: 37.5em) {
   .heading-primary--main {
@@ -163,7 +162,6 @@ body {
     font-size: 2.5rem;
   }
 }
-
 .heading-tertiary {
   font-size: 1.6rem;
   font-weight: 700;
@@ -532,6 +530,10 @@ body {
   border-radius: 3px;
   box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.15);
   transition: transform 0.3s;
+  /*
+  &:hover {
+      transform: translateY(-1.5rem) scale(1.03);
+  }*/
 }
 @media only screen and (max-width: 56.25em) {
   .feature-box {
@@ -550,9 +552,6 @@ body {
   .feature-box__icon {
     margin-bottom: 0;
   }
-}
-.feature-box:hover {
-  transform: translateY(-1.5rem) scale(1.03);
 }
 
 .form__group:not(:last-child) {
@@ -1141,14 +1140,13 @@ body {
   padding: 15rem 0;
   background-size: cover;
   transform: skewY(-7deg);
-  margin-top: -10rem;
 }
 .section-features1 > * {
   transform: skewY(7deg);
 }
 @media only screen and (max-width: 56.25em) {
   .section-features1 {
-    padding: 10rem 0;
+    padding: 15rem 0;
   }
 }
 
@@ -1170,13 +1168,11 @@ body {
 }
 
 .section-tours {
-  background-color: #f7f7f7;
-  padding: 25rem 0 20rem 0rem;
-  margin-top: -10rem;
+  padding: 1rem 0 8rem 0rem;
 }
 @media only screen and (max-width: 56.25em) {
   .section-tours {
-    padding: 20rem 0 15rem 0;
+    padding: 1rem 0 8rem 0;
   }
 }
 
@@ -1192,7 +1188,7 @@ body {
 
 .section-book {
   margin-top: 10vh;
-  padding: 15rem 0;
+  padding: 10rem 0;
   background-image: linear-gradient(to right bottom, #f1383b, #2c0505);
 }
 @media only screen and (max-width: 56.25em) {
@@ -1202,7 +1198,7 @@ body {
 }
 
 .book {
-  background-image: linear-gradient(105deg, rgba(255, 255, 255, 0.9) 0%, rgba(255, 255, 255, 0.9) 50%, transparent 50%), url(../img/nat-10.jpg);
+  background-image: linear-gradient(105deg, rgba(255, 255, 255, 0.9) 0%, rgba(255, 255, 255, 0.9) 50%, transparent 50%);
   background-size: 100%;
   border-radius: 3px;
   box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.2);
@@ -1223,13 +1219,13 @@ body {
 }
 @media only screen and (max-width: 75em) {
   .book {
-    background-image: linear-gradient(105deg, rgba(255, 255, 255, 0.9) 0%, rgba(255, 255, 255, 0.9) 65%, transparent 65%), url(../img/nat-10.jpg);
+    background-image: linear-gradient(105deg, rgba(255, 255, 255, 0.9) 0%, rgba(255, 255, 255, 0.9) 65%, transparent 65%);
     background-size: cover;
   }
 }
 @media only screen and (max-width: 56.25em) {
   .book {
-    background-image: linear-gradient(to right, rgba(255, 255, 255, 0.9) 0%, rgba(255, 255, 255, 0.9) 100%), url(../img/nat-10.jpg);
+    background-image: linear-gradient(to right, rgba(255, 255, 255, 0.9) 0%, rgba(255, 255, 255, 0.9) 100%);
   }
 }
 
