--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -28,8 +28,8 @@ body {
             font-family: 5rem;
         }
         
-        animation-delay: 3s;
-        animation-iteration-count: 3;
+        //animation-delay: 1s;
+        animation-iteration-count: 1;
         
     }
     
@@ -63,6 +63,9 @@ body {
 
     @include respond(phone) {
         font-size: 2.5rem;
+    }
+    &--sponsoren{
+        
     }
     /*
     &:hover {
