--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -18,14 +18,14 @@
     padding: 15rem 0;
     background-size: cover;
     transform: skewY(-7deg);
-    margin-top: -10rem;
+    
 
     & > * {
         transform: skewY(7deg);
     }
 
     @include respond(tab-port) {
-        padding: 10rem 0;
+        padding: 15rem 0;
     }
 
 }
@@ -55,12 +55,12 @@
 
 
 .section-tours {
-    background-color: $color-grey-light-1;
-    padding: 25rem 0 20rem 0rem;
-    margin-top: -10rem;
+    //background-color: $color-grey-light-1;
+    padding: 1rem 0 8rem 0rem;
+    //margin-top: -10rem;
 
     @include respond(tab-port) {
-        padding: 20rem 0 15rem 0;
+        padding: 1rem 0 8rem 0;
     }
 }
 
@@ -75,7 +75,7 @@
 
 .section-book {
     margin-top: 10vh;
-    padding: 15rem 0;
+    padding: 10rem 0;
     background-image: linear-gradient(to right bottom, $color-primary-light, $color-primary-dark);
 
     @include respond(tab-port) {
@@ -87,8 +87,7 @@
     background-image: linear-gradient(105deg, 
                                     rgba($color-white, .9) 0%,
                                     rgba($color-white, .9) 50%,
-                                    transparent 50%) ,
-                            url(../img/nat-10.jpg);
+                                    transparent 50%);
     background-size: 100%;
     border-radius: 3px;
     box-shadow: 0 1.5rem 4rem rgba($color-black, .2);
@@ -97,16 +96,14 @@
         background-image: linear-gradient(105deg, 
         rgba($color-white, .9) 0%,
         rgba($color-white, .9) 65%,
-        transparent 65%) ,
-url(../img/nat-10.jpg);
+        transparent 65%);
         background-size: cover;
     }
 
     @include respond(tab-port) {
         background-image: linear-gradient(to right, 
         rgba($color-white, .9) 0%,
-        rgba($color-white, .9) 100%),
-url(../img/nat-10.jpg);
+        rgba($color-white, .9) 100%);
     }
 /*
     &__form {
