--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -10,6 +10,8 @@ $color-gold: #e2b007;
 
 $color-silver: #c4cace;
 
+$color-platin: #e5e4e2;
+
 $color-tertiary-light: #2998ff;
 $color-tertiary-dark: #5643fa;
 
