--- a/css/style.css
+++ b/css/style.css
@@ -137,7 +137,7 @@ body {
 }
 
 .heading-secondary {
-  font-size: 4rem;
+  font-size: 5rem;
   text-transform: uppercase;
   font-weight: 700;
   display: inline-block;
@@ -944,8 +944,8 @@ body {
 
 .header {
   height: 85vh;
-  background-image: linear-gradient(to right bottom, rgba(241, 56, 59, 0.5), rgba(44, 5, 5, 0.8)), url(../../new_img/marschwertung.jpg);
-  background-size: cover;
+  background-image: linear-gradient(to right bottom, rgba(241, 56, 59, 0.5), rgba(44, 5, 5, 0.8)), url(../../new_img/hero1.PNG);
+  background-size: inherit;
   background-position: top;
   position: relative;
 }
@@ -958,7 +958,7 @@ body {
 }
 @media only screen and (min-resolution: 192dpi) and (min-width: 37.5em), only screen and (-webkit-min-device-pixel-ratio: 2) and (min-width: 37.5em), only screen and (min-width: 125em) {
   .header {
-    background-image: linear-gradient(to right bottom, rgba(241, 56, 59, 0.8), rgba(44, 5, 5, 0.8)), url(../../new_img/marschwertung.jpg);
+    background-image: linear-gradient(to right bottom, rgba(241, 56, 59, 0.5), rgba(44, 5, 5, 0.8)), url(../../new_img/hero1.PNG);
   }
 }
 @media only screen and (max-width: 37.5em) {
@@ -1124,6 +1124,10 @@ body {
   transform: rotate(-135deg);
 }
 
+body {
+  /**background-color: black;*/
+}
+
 .section-about {
   background-color: #f7f7f7;
   padding: 25rem 0;
@@ -1136,10 +1140,11 @@ body {
 }
 
 .section-features1 {
-  background-image: linear-gradient(to right bottom, rgba(226, 176, 7, 0.8), rgba(0, 0, 0, 0.8)), url(../img/nat-4.jpg);
+  background-image: url(../../new_img/hauptsponsor.jpg);
   padding: 15rem 0;
   background-size: cover;
   transform: skewY(-7deg);
+  margin: 0 0 10rem 0;
 }
 .section-features1 > * {
   transform: skewY(7deg);
@@ -1151,22 +1156,93 @@ body {
 }
 
 .section-features2 {
-  background-image: linear-gradient(to right bottom, rgba(196, 202, 206, 0.8), rgba(0, 0, 0, 0.8)), url(../img/nat-4.jpg);
+  /*background-image: linear-gradient(
+      to right bottom,
+      rgba($color-gold, 0.8),
+      rgba($color-black, 0.8)),
+  url(../img/nat-4.jpg);*/
+  background-color: #A12325;
   padding: 15rem 0;
-  margin: 0 0 10rem 0;
   background-size: cover;
   transform: skewY(-7deg);
-  margin-top: 3rem;
+  margin: 0 0 10rem 0;
 }
 .section-features2 > * {
   transform: skewY(7deg);
 }
 @media only screen and (max-width: 56.25em) {
   .section-features2 {
-    padding: 10rem 0;
+    padding: 15rem 0;
   }
 }
 
+.section-features3 {
+  /*background-image: linear-gradient(
+      to right bottom,
+      rgba($color-silver, 0.8),
+      rgba($color-black, 0.8)),
+  url(../img/nat-4.jpg);*/
+  background-color: #A12325;
+  padding: 15rem 0;
+  background-size: cover;
+  transform: skewY(-7deg);
+  margin: 0 0 10rem 0;
+}
+.section-features3 > * {
+  transform: skewY(7deg);
+}
+@media only screen and (max-width: 56.25em) {
+  .section-features3 {
+    padding: 15rem 0;
+  }
+}
+
+.section-features4 {
+  /*background-image: linear-gradient(
+      to right bottom,
+      rgba($color-platin, 0.8),
+      rgba($color-black, 0.8)),
+  url(../img/nat-4.jpg);*/
+  background-color: #A12325;
+  padding: 15rem 0;
+  background-size: cover;
+  transform: skewY(-7deg);
+  margin: 0 0 10rem 0;
+}
+.section-features4 > * {
+  transform: skewY(7deg);
+}
+@media only screen and (max-width: 56.25em) {
+  .section-features4 {
+    padding: 15rem 0;
+  }
+}
+
+/*
+.section-features3 {
+
+    background-image: linear-gradient(
+        to right bottom,
+        rgba($color-silver, 0.8),
+        rgba($color-black, 0.8)),
+    url(../img/nat-4.jpg);
+    padding: 15rem 0;
+    margin: 0 0 10rem 0;
+    background-size: cover;
+    transform: skewY(-7deg);
+    margin-top: 3rem;
+
+    & > * {
+        transform: skewY(7deg);
+    }
+
+    @include respond(tab-port) {
+        padding: 10rem 0;
+    }
+
+}
+
+*/
 .section-tours {
   padding: 1rem 0 8rem 0rem;
 }
