--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -1,7 +1,7 @@
 // COLORS
-$color-primary: #A12325;
-$color-primary-light: #f1383b;
-$color-primary-dark: #2c0505;
+$color-primary: #a3221d;
+$color-primary-light: #a3221d;
+$color-primary-dark: #6d0000;
 
 $color-secondary-light: #ffb900;
 $color-secondary-dark: #ff7730;
@@ -22,8 +22,9 @@ $color-grey-dark: #777;
 $color-grey-dark-2: #999;
 $color-grey-dark-3: #333;
 
-$color-white: #fff;
-$color-black: #000;
+$color-white: #f5f5f7;
+$color-black: #e2e2e2;
+$color-real-white: #ffffff;
 
 
 // FONT
