--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -1,5 +1,5 @@
 body {
-    font-family: "Lato", sans-serif;
+    font-family: "Proxima Sans Regular", sans-serif;
     font-weight: 400;
     /*font-size: 16px;*/
     line-height: 1.7;
@@ -56,6 +56,9 @@ body {
     color: transparent;
     letter-spacing: .2rem;
     transition: all .2s;
+    &--bezeichnung{
+        color: $color-white;
+    }
 
     @include respond(tab-port) {
         font-size: 3rem;
@@ -64,9 +67,35 @@ body {
     @include respond(phone) {
         font-size: 2.5rem;
     }
-    &--sponsoren{
+  
+    /*
+    &:hover {
+        transform: skewY(2deg) skewX(15deg) scale(1.1);
+        text-shadow: .5rem 1rem 2rem rgba($color-black, .2);
+    }*/
+}
 
+.heading-sponsor {
+    font-size: 5rem;
+    text-transform: uppercase;
+    font-weight: 700;
+    display: inline-block;
+    background-image: linear-gradient(to right, $color-primary-dark, $color-primary-dark);
+    -webkit-background-clip: text;
+    color: $color-white;
+    letter-spacing: .2rem;
+    transition: all .2s;
+
+    
+
+    @include respond(tab-port) {
+        font-size: 3rem;
     }
+
+    @include respond(phone) {
+        font-size: 2.5rem;
+    }
+  
     /*
     &:hover {
         transform: skewY(2deg) skewX(15deg) scale(1.1);
