--- a/sass/components/_feature-box.scss
+++ b/sass/components/_feature-box.scss
@@ -1,6 +1,6 @@
 .feature-box {
 
-    background-color: rgba($color-white, .8);
+    background-color: rgba($color-white, 1);
     font-size: 1.5rem;
     padding: 2.5rem;
     text-align: center;
@@ -22,7 +22,8 @@
         display: inline-block;
         background-image: linear-gradient(to right, $color-primary-light, $color-primary-dark);
         -webkit-background-clip: text;
-        color: transparent;
+        //color: transparent;
+        //color: $color-black;
 
         @include respond(tab-port) {
             margin-bottom: 0;
