--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,4 +1,5 @@
 .header {
+    background-color: $color-black;
     height: 85vh;
     background-image: linear-gradient(
         to right bottom,
@@ -8,6 +9,7 @@
     background-size: inherit;
     background-position: top;
     position: relative;
+    
     
 
     @supports (clip-path: polygon(0 0)) or (-webkit-clip-path: polygon(0 0)) {
